# TicTacFoe

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: ai.rs  app.rs  cli.rs  game.rs  lib.rs  main.rs  network.rs  scenes.rs  ui.rs  utils.rs
src/ai/: mcts.rs  random.rs  simple.rs
src/game/: base.rs  ultimate.rs
src/network/: protocol.rs
tests/: online_ultimate.rs
