[package]
name = "tic-tac-foe"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
authors = ["Cr3sp1"]
repository = "https://github.com/Cr3sp1/TicTacFoe"
keywords = ["game", "tui", "tic-tac-toe"]
categories =["games",]

[dependencies]
crossterm = "0.29.0"
rand = "0.9.2"
ratatui = "0.30.0"
