[package]
name = "tic-tac-foe"
description = "A tui to play Ultimate tic-tac-toe against human or AI opponents."
version = "1.0.0"
edition = "2024"
license = "MIT"
readme = "README.md"
authors = ["Cr3sp1"]
repository = "https://github.com/Cr3sp1/TicTacFoe"
keywords = ["game", "tui", "tic-tac-toe", "utt", "ai"]
categories =["games",]

[dependencies]
crossterm = "0.29.0"
iroh = "1.0.2"
rand = "0.9.2"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync"] }
